--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
   <body>
     <div class="page flex-col justify-between">
       <div class="text-wrapper_1 flex-col">
-        <span class="text_1">地狱厨房伪查询中心</span>
+        <span class="text_1"></span>
       </div>
       <div class="box_1 flex-col">
         <div class="box_2 flex-col"></div>
         <div class="block_1 flex-col">
           <div class="box_4 flex-col"></div>
           <span class="text_2">长按识别二维码&nbsp;关注公众号</span>
-          <img
-            class="label_1"
-            referrerpolicy="no-referrer"
-            src="https://lanhu.oss-cn-beijing.aliyuncs.com/SketchPnge076ad27a1ee34bd984f1137a4e3e583d8a07ea54e5833032a2def9f502b6b33"
-          />
+        
           <span class="text_3">点击&nbsp;防伪查询&nbsp;图文消息</span>
           <img
             class="label_3"
