--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>京东首页</title>
+  <title>www.wruru.com</title>
   <style>
     /* 顶部导航栏样式 */
     .top-nav {
